# backend/apis/search/router.ts
@@ -1,0 +1,6 @@
+import {Router} from 'express';
+import {searchController} from "./controller";
+
+export const searchRouter = new Router();
+
+searchRouter.get("/", searchController.get);
