# backend/index.ts
@@ -8,6 +8,7 @@ import {userRouter} from "./apis/user/router";
 import {notebookRouter} from "./apis/notebook/router";
 import {notesRouter} from "./apis/note/router";
 import {tagsRouter} from "./apis/tag/router";
+import {searchRouter} from "./apis/search/router";
 import passport from "passport";
 import {passportStrategy} from "./apis/auth/passportStrategy";
 import { PrismaSessionStore } from '@quixo3/prisma-session-store';
@@ -52,6 +53,7 @@ app.use('/notebook', passport.session(), isAuthenticated, notebookRouter);
 app.use('/note', passport.session(), isAuthenticated, notesRouter);
 app.use('/tag', passport.session(), isAuthenticated, tagsRouter);
 app.use('/event', passport.session(), isAuthenticated, eventRouter);
+app.use('/search', passport.session(), isAuthenticated, searchRouter);
 
 // Setup Swagger UI for API documentation
 const swaggerYaml = fs.readFileSync("./api-documentation/openapi.yaml", "utf8");
